# 3d-object-detection

./: pyproject.toml  run.py
src/: data_loader.py  model.py
